Fix Email Notification

--- a/.env.example
+++ b/.env.example
@@ -32,9 +32,9 @@ MAIL_MAILER=smtp
 MAIL_HOST=mail.samaricode.my.id
 MAIL_PORT=465
 MAIL_USERNAME=admin@samaricode.my.id
-MAIL_PASSWORD=eSNiWnh9u8WA
+MAIL_PASSWORD=E%hGd+I4.PHC
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS="admin@samaricode.my.id"
+MAIL_FROM_ADDRESS=admin@samaricode.my.id
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
